--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,9 +74,12 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
+  fonts:
   #   - family: Schyler
+     - family: B-NAZANIN
   #     fonts:
+       fonts:
+         - asset: fonts/B-NAZANIN.TTF
   #       - asset: fonts/Schyler-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
